# Kawaii-0RTT

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.md  LICENSE  LICENSE-アクゼスティア  QML_shenanigans.md  README.md  b.sh  main.cpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  kawaii_client.h
src/cpp/: CMakeLists.txt  cpp_utils.cpp  cpp_utils.h
src/js/: CMakeLists.txt
src/kawaii_loader/: CMakeLists.txt  kawaii_loader.cpp  kawaii_loader.h
src/plugin_library/: CMakeLists.txt  plugin_library.h
src/theme-manager/: CMakeLists.txt  theme_manager.cpp  theme_manager.h
themes/: README.md
themes/Dark/: CMakeLists.txt  Main.qml
themes/Dark/Back/: extras.mjs
themes/Dark/Front/: Auth.qml  Menu.qml
themes/Light/: CMakeLists.txt  Main.qml
themes/Light/Back/: extras.mjs
themes/Light/Front/: Auth.qml  Menu.qml
